--- a/djproject/css/page.css
+++ b/djproject/css/page.css
@@ -24,6 +24,9 @@ a{text-decoration:none;}a:link{text-decoration:none;}a:visited{text-decoration:n
 .logo-row a{
 	color: #FFFFFF;
 }
+.login{
+	position: absolute;
+}
 #select-toggle{
 	display: none;
 }
