--- a/djproject/css/page.css
+++ b/djproject/css/page.css
@@ -278,3 +278,7 @@ a{text-decoration:none;}a:link{text-decoration:none;}a:visited{text-decoration:n
     height: 70px;
     padding: 15px;
 }
+
+.client a:nth-child(+1){
+	display: none;
+}
