--- a/djproject/css/page.css
+++ b/djproject/css/page.css
@@ -279,6 +279,6 @@ a{text-decoration:none;}a:link{text-decoration:none;}a:visited{text-decoration:n
     padding: 15px;
 }
 
-.client a:nth-child(+1){
+.client child:nth-child(+1){
 	display: none;
 }
