--- a/djproject/css/manager.css
+++ b/djproject/css/manager.css
@@ -121,5 +121,7 @@ a{text-decoration:none;}a:link{text-decoration:none;}a:visited{text-decoration:n
 .console iframe{
 	height: 658px;
 	width: 100%;
+	position: absolute;
+	left: 0px;
 }
 
