--- a/djproject/css/manager.css
+++ b/djproject/css/manager.css
@@ -8,14 +8,15 @@ a{text-decoration:none;}a:link{text-decoration:none;}a:visited{text-decoration:n
 .daohang-top {
 	width: 100%;
 	height: 110px;
-	background: url('../img/btitlebgm.jpg');
-	background-repeat:no-repeat;
-	background-size: 100% 100%;
-	background-attachment:fixed;
+	background-color: #51DEEA;
+	position: relative;	
 }
 #login{
     text-align: right;
     padding-right: 35px;
+    background-color: #000;
+    height: 35px;
+    line-height: 35px;
 }
 #login span{
 	color: #ffffff;
@@ -25,13 +26,14 @@ a{text-decoration:none;}a:link{text-decoration:none;}a:visited{text-decoration:n
 }
 .daohang-top #daohang-list{
     width: 100%;
-    position: relative;
-    bottom: -57px;
+    position: absolute;
+    bottom: 0px;
     float: left;
 }
 .daohang-top #daohang-list ul{
     list-style: none;
     float: left;
+    width: 100%;
     padding: 0px;
     margin: 0px;
 }
@@ -39,26 +41,48 @@ a{text-decoration:none;}a:link{text-decoration:none;}a:visited{text-decoration:n
     display: block;
     height: 35px;
     line-height: 35px;
-    float: left;
+    float: right;
     color: #FFFFFF;
     cursor: pointer;
     padding: 0px 3px 0px 3px;
     margin: 0px 4px 0px 4px;
+    background-color: #1C98A2;
+    position: relative;
+    right: 0px;
+    text-align: center;
+    width: 100px;
 }
-.daohang-top #daohang-list ul li.active,.daohang-top #daohang-list ul li:hover{
-    border: 1px solid #FFF;
-    margin: 0px 3px 0px 3px;
+.daohang-top #daohang-list ul li.active{
+    margin: 0px;
+    float: right;
+    border: none;
+    border-radius: 0px;
+    background-color: #1C98A2;
+    margin: 0px 2px 0px 2px;
+}
+.daohang-top #daohang-list ul li:hover{
+	border: 2px solid #FFF;
+    margin: 0px 2px 0px 2px;
 }
 
 /*左边导航*/
 .daohang-left{
     width: 180px;
     min-height: 665px;
-    background-color: #353232;
+    background-color: #51DEEA;
     float: left;
     position: relative;
     left: 0px;
     margin-left: -1px;
+}
+.daohang-left .title{
+    width: 180px;
+    height: 35px;
+    line-height: 35px;
+    text-align: center;
+    display: block;
+    color: #FFFFFF;
+    background-color: #1C98A2;
 }
 .daohang-left #open-close{
     width: 29px;
