--- a/djproject/css/manager.css
+++ b/djproject/css/manager.css
@@ -8,7 +8,7 @@ a{text-decoration:none;}a:link{text-decoration:none;}a:visited{text-decoration:n
 .daohang-top {
 	width: 100%;
 	height: 110px;
-	background-color: #51DEEA;
+	background-color: #36393A;
 	position: relative;	
 }
 #login{
@@ -46,7 +46,7 @@ a{text-decoration:none;}a:link{text-decoration:none;}a:visited{text-decoration:n
     cursor: pointer;
     padding: 0px 3px 0px 3px;
     margin: 0px 4px 0px 4px;
-    background-color: #1C98A2;
+    background-color: #000000;
     position: relative;
     right: 0px;
     text-align: center;
@@ -57,7 +57,6 @@ a{text-decoration:none;}a:link{text-decoration:none;}a:visited{text-decoration:n
     float: right;
     border: none;
     border-radius: 0px;
-    background-color: #1C98A2;
     margin: 0px 2px 0px 2px;
 }
 .daohang-top #daohang-list ul li:hover{
@@ -69,7 +68,7 @@ a{text-decoration:none;}a:link{text-decoration:none;}a:visited{text-decoration:n
 .daohang-left{
     width: 180px;
     min-height: 665px;
-    background-color: #51DEEA;
+    background-color: #36393A;
     float: left;
     position: relative;
     left: 0px;
@@ -82,7 +81,7 @@ a{text-decoration:none;}a:link{text-decoration:none;}a:visited{text-decoration:n
     text-align: center;
     display: block;
     color: #FFFFFF;
-    background-color: #1C98A2;
+    background-color: #000000;
 }
 .daohang-left #open-close{
     width: 29px;
@@ -124,7 +123,7 @@ a{text-decoration:none;}a:link{text-decoration:none;}a:visited{text-decoration:n
 	display: block;
 }
 .daohang-left #sub-list i{
-	display: block;
+	display: none;
 	float: left;
     height: 35px;
     width: 19px;
