--- a/djproject/css/articlemanage.css
+++ b/djproject/css/articlemanage.css
@@ -1,17 +1,19 @@
 body {
     margin: 0px;
-    background-color: #EEEEEE;
 }
 
 .form{
-	width: 70%;
-	margin: auto;
+	width: 90%;
+    margin: 30px auto 20px auto;
 	margin-top: 30px;
 	position: relative;
 	overflow: hidden;
 }
 .form-content {
-	padding: 20px;
+	    padding: 20px 20px 0px 20px;
+}
+.form-content div{
+	margin-bottom: 20px;
 }
 .form #name {
 	width: 300px;
@@ -51,7 +53,21 @@ body {
 }
 
 .editer{
-	width: 70%;
+	width: 90%;
 	min-height: 600px;
 	margin: auto;
+}
+
+.footer{
+	width: 90%;
+	margin: auto;
+	padding: 0px 20px  50px 20px;
+}
+.footer span{
+	background-color: #1AB394;
+	border-radius: 5px;
+	display: block;
+	padding: 5px 10px 5px 10px;
+	float: left;
+	margin-right: 5px;
 }
